Canvas.measureText returns actualBoundingBoxLeft values with wrong sign
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: mozillabugs, Assigned: jfkthame)
Details
Attachments
(4 files)
The method CanvasRenderingContext2D.measureText() returns values for the actualBoundingBoxLeft property of the returned TextMetrics object that consistently have the wrong sign.
The specification says: “The distance parallel to the baseline from the alignment point given by the textAlign attribute to the left side of the bounding rectangle of the given text, in CSS pixels; positive numbers indicating a distance going left from the given alignment point.”
To reproduce:
– Go to
https://lindenbergsoftware.com/mozilla/canvas.metrics.html
On this page, a number of Javanese strings are rendered with Noto Sans Javanese, in the “Text” column as normal web content, in the “Canvas” column by drawing into a canvas. The actualBoundingBox* properties of the TextMetrics object returned by CanvasRenderingContext2D.measureText() are shown in the rightmost column.
– Compare the renderings in the “Text” column with the “left” values in the rightmost column.
Expected result:
– Where a base character stands by itself, or has a mark attached that does not extend to the left of the base character, the “left” value should normally be slightly negative, indicating that there’s some white space between the origin and the left side of the glyph. Where a subjoined consonant extends to the left of the base consonant, the “left” value should normally be positive to indicate that the mark’s left side is at “a distance going left from the given alignment point”.
Actual result:
– The actual results are the opposite: Where a base character stands by itself, or has a mark attached that does not extend to the left of the base character, the “left” value is slightly positive. Where a subjoined consonant extends to the left of the base consonant, the “left” value is negative. See attached screenshots.
Configuration:
Firefox 77.0.1 on macOS 10.14.6 on iMac 27".
Reporter | ||
Comment 1•5 years ago
|
||
Comment 2•5 years ago
•
|
||
Hi Norbert, thank you for the bug report!
Could you please attach a copy of your about:support information? Do you know whether this has always been incorrect, or whether it is a regression?
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
Looks like we simply overlooked the reversed sign of the actualBoundingBoxLeft attribute when this was implemented in bug 1102584. Not a regression, just a bug in a recently-implemented feature.
Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Assignee | ||
Comment 5•5 years ago
|
||
This should fix the behavior; with the patch, Norbert's testcase looks much better (and more similar to Chrome's results, though text measurements are often not exactly identical).
If there's no existing testcase that covers this, we should add one; I'll see what tryserver has to say about it.
Assignee | ||
Comment 6•5 years ago
|
||
Reporter | ||
Comment 7•5 years ago
|
||
Thank you for fixing this so quickly, Jonathan! Looks like no additional info is needed from me.
Reporter | ||
Updated•5 years ago
|
Assignee | ||
Comment 9•5 years ago
|
||
Marking leave-open for now, pending review on the wpt-update patch.
Comment 10•5 years ago
|
||
bugherder |
Assignee | ||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Comment 13•5 years ago
|
||
bugherder |
Description
•