Bug 1646926 - Fix the sign of canvas TextMetrics.actualBoundingBoxLeft return value. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D80347